--- a/recuperarcontraseña.html
+++ b/recuperarcontraseña.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Recuperar Contraseña</title>
-  <link rel="stylesheet" href="stylelogin.css" />
+  <link rel="stylesheet" href="recuperarcontraseña.css" />
 </head>
 <body>
   <form class="recuperar-container" action="recuperar.php" method="POST">
@@ -13,7 +13,7 @@
     <label for="correo">Correo electrónico</label>
     <input type="email" id="correo" name="correo" required />
 
-    <input type="submit" value="Enviar instrucciones" />
+    <input type="submit" value="Enviar" />
 
     <a href="login.html" class="boton-regresar">Regresar</a>
   </form>
