--- a/Login.html
+++ b/Login.html
@@ -21,7 +21,7 @@
     <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña" required>
 
     <button type="submit">Ingresar</button>
-  
+    <p>O inicia sesión con:</p>
     <div class="google-login">
         <h3>O inicia sesión con Google</h3>
         <div id="g_id_onload"
