--- a/Inicio.html
+++ b/Inicio.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Corredor Ecológico</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
     <header>
@@ -115,7 +116,8 @@
     <footer>
         <p>&copy; 2025 Correrdo Ecológico. Todos los derechos reservados.</p>
     </footer>
-
-
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="mapa.js"></script>
+    
     </body>
     </html>
