--- a/reportes.html
+++ b/reportes.html
@@ -33,7 +33,19 @@
 <!-- Sección para mostrar la lista de reportes -->
 <h2>Lista de Reportes</h2>
 <div id="lista-reportes"></div>
+    <section id="contacto">
+        <h2>📬 Contáctanos</h2>
+        <p>¿Quieres unirte a nuestras campañas? Escríbenos a <strong>CorredorEcologico@salvaelplaneta.org</strong></p>
+    </section>
 
+    <footer>
+        <p>&copy; 2025 Correrdo Ecológico. Todos los derechos reservados.</p>
+    </footer>
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="mapa.js"></script>
+    
+    </body>
+    </html>
 <script src="server.js"></script>
 <script src="reportes.js"></script>
 </body>
