--- a/recuperarcontraseña.html
+++ b/recuperarcontraseña.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Recuperar Contraseña</title>
-  <link rel="stylesheet" href="stylelogin.css" />
+  <link rel="stylesheet" href="recuperarcontraseña.css" />
 </head>
 <body>
   <form class="recuperar-container" action="recuperar.php" method="POST">
