--- a/Login.html
+++ b/Login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Panel de Usuario</title>
+  <title>Iniciar Sesión</title>
   <link rel="stylesheet" href="login.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
       <button type="submit">Registrar</button>
     </form>
 
-    <h2>Login</h2>
+    <h2>Iniciar Sesión</h2>
     <form id="formLogin">
       <label for="loginEmail">Correo Electrónico</label>
       <input type="email" id="loginEmail" placeholder="Email" required />
@@ -31,7 +31,7 @@
       <label for="loginPassword">Contraseña</label>
       <input type="password" id="loginPassword" placeholder="Contraseña" required />
 
-      <button type="submit">Login</button>
+      <button type="submit">Iniciar</button>
     </form>
 
     <!-- Panel de administrador -->
